fixed issue with navbar-toggler not working (added in the JS script at the end of the page). Changed hero image for menu page. Added new headers for each page. Styled the button on the landing page. Fixed sizing issue with footer icons on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,24 @@ body {
 
 nav a {
   color: white !important;
-line-height: 25px;
-  display: inline;
+
+  padding: 0 !important;
+  margin-right: 15px;
+  margin-top: 10px;
 }
 
 .nav-logo {
- font-size: 1.6rem;
- letter-spacing: 3px;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  font-family: "Reem Kufi", sans-serif;
+  line-height: 25px;
+}
 
+.nav-link {
+  padding-left: 0 !important;
 }
 
 nav li a:hover {
@@ -86,6 +96,13 @@ nav li a:hover {
   position: relative;
   z-index: 0;
   display: flex;
+}
+
+.opaque-overlay {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 1200px) {
@@ -151,13 +168,29 @@ nav li a:hover {
   background: url("../images/PALOMA_logo.png");
   height: 25vh;
   width: 25vw;
-  
 }
 
 .main-logo h1 {
   color: white;
   letter-spacing: 2rem;
   font-family: "Reem Kufi", sans-serif;
+}
+
+/*------------------------- Buttons ---------------------- */
+
+.rewards-button {
+  font-size: 1.8vmax !important;
+  background-color: #f3f3f3 !important;
+  border: none !important;
+  color: #4b4b4b !important;
+  border-radius: 10px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.rewards-button:hover {
+  background-color: #3a3a3a !important;
+  border: none !important;
+  color: #fafafa !important;
 }
 
 /*------------------------- Block Dividers ------------------*/
@@ -208,6 +241,17 @@ footer ul {
   margin: 0;
 }
 
+.footer-flex {
+  display: flex;
+  min-height: 45vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer ul {
+  margin: 0;
+}
+
 .social-media {
   text-align: center;
   bottom: 5px;
@@ -220,13 +264,62 @@ footer ul {
 }
 
 .social-media i {
-  font-size: 160%;
+  font-size: 2vmax !important;
   letter-spacing: 0px;
   padding-left: 45px;
   padding-right: 45px;
   margin: 1%;
   text-decoration: none;
-  color: #fafafa;
+  color: #fafafa !important;
+  bottom: 10px;
+}
+
+@media screen and (min-width: 601px) {
+  .social-media i {
+    font-size: 2vmax !important;
+    letter-spacing: 0px;
+    padding: 0 45px 0 45px;
+    margin: 1%;
+    text-decoration: none;
+    color: #777777;
+    bottom: 0px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .social-media i {
+    font-size: 2vmax !important;
+
+    padding: 0 20px 0 20px;
+    margin: 1%;
+    text-decoration: none;
+    color: #777777;
+    bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .social-media i {
+    font-size: 2vmax !important;
+
+    padding: 0 15px 0 15px;
+    margin: 1%;
+    text-decoration: none;
+    color: #777777;
+    bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .social-media i {
+    font-size: 2vmax !important;
+    letter-spacing: 100px;
+    padding: 0 45px 0 45px;
+    margin: 1%;
+    text-decoration: none;
+    color: #777777;
+    bottom: 10px;
+  }
 }
 
 .copyright {
